--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,9 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-24
 
+   before_script:
+    - chmod +x gradlew
+
   before_cache:
     - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
     - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
