--- a/circle.yml
+++ b/circle.yml
@@ -7,10 +7,11 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
-      - chmod +x gradlew
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      -run:
+        command: chmod +x gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
