--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,8 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       -run:
-        command: chmod +x gradlew
+        override:
+          - chmod +x gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
