--- a/circle.yml
+++ b/circle.yml
@@ -19,9 +19,9 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      #- run:
-      #    name: Run Tests
-      #    command: ./gradlew lint test
+      - run:
+          name: Run Tests
+          command: ./gradlew
       - store_artifacts:
           path: app/build/outputs
           destination: outputs
