--- a/circle.yml
+++ b/circle.yml
@@ -21,7 +21,7 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Run Tests
-          command: ./gradlew
+          command: ./gradlew assembleDebug
       - store_artifacts:
           path: app/build/outputs
           destination: outputs
