--- a/circle.yml
+++ b/circle.yml
@@ -23,9 +23,9 @@ jobs:
           name: Run Tests
           command: ./gradlew assembleDebug
       - store_artifacts:
-          path: app/build/outputs
-          destination: outputs
-      - copy_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_artifacts:
           command: cp -r app/build/outputs $CIRCLE_ARTIFACTS
       - store_test_results:
           path: app/build/test-results
