--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,9 @@ jobs:
           name: Run Tests
           command: ./gradlew assembleDebug
       - store_artifacts:
-          path: app/build/reports
-          destination: reports
+          path: app/build/outputs
+          destination: outputs
+      - run:
+          command: cp -r app/build/outputs $CIRCLE_ARTIFACTS
       - store_test_results:
           path: app/build/test-results
