--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,7 @@ jobs:
       - store_artifacts:
           path: app/build/outputs
           destination: outputs
-      - run:
-          command: cp -r app/build/outputs $CIRCLE_ARTIFACTS
+      #- run:
+      #    command: cp -r app/build/outputs outputs
       - store_test_results:
           path: app/build/test-results
