--- a/circle.yml
+++ b/circle.yml
@@ -25,13 +25,10 @@ jobs:
       - store_artifacts:
           path: app/build/outputs
           destination: outputs
-<<<<<<< HEAD
       #- run:
       #    command: cp -r app/build/outputs outputs
-=======
-      - run:
-          name: Copy Artifacts
-          command: cp -r app/build/outputs app/build/outputs
->>>>>>> origin/master
+      #- run:
+      #    name: Copy Artifacts
+      #    command: cp -r app/build/outputs app/build/outputs
       - store_test_results:
           path: app/build/test-results
