--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-ads:11.4.0'
+    compile 'com.google.firebase:firebase-core:11.4.0'
 }
+apply plugin: 'com.google.gms.google-services'
